[package]
name = "merge-insert-cas-repro"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
lance = "=4.0.0"
arrow-array = "=57.3.0"
arrow-schema = "=57.3.0"
tokio = { version = "=1.49.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[workspace]
